# internal/mods/rbac/schema/user.go
@@ -7,7 +7,6 @@ import (
 	"github.com/JamieYee/save_service/pkg/crypto/hash"
 	"github.com/JamieYee/save_service/pkg/errors"
 	"github.com/JamieYee/save_service/pkg/util"
-	"github.com/go-playground/validator/v10"
 )
 
 const (
@@ -19,10 +18,9 @@ const (
 type User struct {
 	ID        string    `json:"id" gorm:"size:20;primarykey;"` // Unique ID
 	Username  string    `json:"username" gorm:"size:64;index"` // Username for login
-	Name      string    `json:"name" gorm:"size:64;index"`     // Name of user
 	Password  string    `json:"-" gorm:"size:64;"`             // Password for login (encrypted)
-	Phone     string    `json:"phone" gorm:"size:32;"`         // Phone number of user
-	Email     string    `json:"email" gorm:"size:128;"`        // Email of user
+	Nickname  string    `json:"nickname" gorm:"size:64;index"` // NickName of user
+	Avatar    string    `json:"avatar" gorm:"size:256;"`       // Avatar of user
 	Remark    string    `json:"remark" gorm:"size:1024;"`      // Remark of user
 	Status    string    `json:"status" gorm:"size:20;index"`   // Status of user (activated, freezed)
 	CreatedAt time.Time `json:"created_at" gorm:"index;"`      // Create time
@@ -38,7 +36,7 @@ func (a *User) TableName() string {
 type UserQueryParam struct {
 	util.PaginationParam
 	LikeUsername string `form:"username"`                                    // Username for login
-	LikeName     string `form:"name"`                                        // Name of user
+	LikeNickname string `form:"nickname"`                                    // Name of user
 	Status       string `form:"status" binding:"oneof=activated freezed ''"` // Status of user (activated, freezed)
 }
 
@@ -67,29 +65,27 @@ func (a Users) ToIDs() []string {
 // Defining the data structure for creating a `User` struct.
 type UserForm struct {
 	Username string    `json:"username" binding:"required,max=64"`                // Username for login
-	Name     string    `json:"name" binding:"required,max=64"`                    // Name of user
 	Password string    `json:"password" binding:"max=64"`                         // Password for login (md5 hash)
-	Phone    string    `json:"phone" binding:"max=32"`                            // Phone number of user
-	Email    string    `json:"email" binding:"max=128"`                           // Email of user
+	Nickname string    `json:"nickname" binding:"max=64"`                         // NickName of user
+	Avatar   string    `json:"avatar" binding:"max=256"`                          // Avatar of user
 	Remark   string    `json:"remark" binding:"max=1024"`                         // Remark of user
 	Status   string    `json:"status" binding:"required,oneof=activated freezed"` // Status of user (activated, freezed)
 	Roles    UserRoles `json:"roles" binding:"required"`                          // Roles of user
 }
 
 // A validation function for the `UserForm` struct.
-func (a *UserForm) Validate() error {
-	if a.Email != "" && validator.New().Var(a.Email, "email") != nil {
-		return errors.BadRequest("", "Invalid email address")
-	}
-	return nil
-}
+//func (a *UserForm) Validate() error {
+//	if a.NickName != "" && validator.New().Var(a.NickName, "nickname") != nil {
+//		return errors.BadRequest("", "Invalid email address")
+//	}
+//	return nil
+//}
 
 // Convert `UserForm` to `User` object.
 func (a *UserForm) FillTo(user *User) error {
 	user.Username = a.Username
-	user.Name = a.Name
-	user.Phone = a.Phone
-	user.Email = a.Email
+	user.Nickname = a.Nickname
+	user.Avatar = a.Avatar
 	user.Remark = a.Remark
 	user.Status = a.Status
 
